fixes in property polaroid width + text overflow in pub details

--- a/frontend/src/css/AdminPublications.css
+++ b/frontend/src/css/AdminPublications.css
@@ -11,7 +11,7 @@ html{
 }
 
 .all-publications {
-    min-width: 965px !important;
+    min-width: 1000px !important;
 }
 
 .btn.btn-primary {
